<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    tools:context=".activities.sign">

    <LinearLayout
        android:id="@+id/uheader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgback"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:tint="@color/colorIcon" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:includeFontPadding="false"
            android:text="@string/sign_up"
            android:textColor="@color/colorIcon"
            android:textSize="@dimen/_15sdp"/>

    </LinearLayout>

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_constraintTop_toBottomOf="@id/uheader">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="@dimen/_20sdp"
               android:layout_marginTop="@dimen/_20sdp"
               android:layout_marginEnd="@dimen/_20sdp"
               android:gravity="center"
               android:includeFontPadding="false"
               android:text="@string/we_need_a_few_details_to_get_your_account_ready"
               android:textColor="@color/colorPrimaryTest"
               android:textSize="@dimen/_15sdp"/>
           <androidx.cardview.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="@dimen/_20sdp"
               app:cardCornerRadius="@dimen/_5sdp">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:padding="@dimen/_4sdp">
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="@dimen/_8sdp"
                       android:layout_marginTop="@dimen/_8sdp"
                       android:text="@string/first_name"
                       android:textColor="@color/colorPrimaryTest"
                       android:textSize="@dimen/_10ssp"/>
                   <EditText
                       android:id="@+id/InputFirstName"
                       android:layout_width="match_parent"
                       android:layout_height="@dimen/_30sdp"
                       android:layout_marginStart="@dimen/_8sdp"
                       android:layout_marginEnd="@dimen/_8sdp"

                       android:imeOptions="actionNext"
                       android:importantForAutofill="no"
                       android:includeFontPadding="false"
                       android:inputType="text"
                       android:textColor="@color/colorPrimaryTest"
                       android:textColorHint="@color/colorHint"
                       android:textSize="@dimen/_13ssp"/>
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="@dimen/_8sdp"
                       android:layout_marginTop="@dimen/_8sdp"
                       android:text="@string/last_name"
                       android:textColor="@color/colorPrimaryTest"
                       android:textSize="@dimen/_10ssp"/>
                   <EditText
                       android:id="@+id/InputLastName"
                       android:layout_width="match_parent"
                       android:layout_height="@dimen/_30sdp"
                       android:layout_marginStart="@dimen/_8sdp"
                       android:layout_marginEnd="@dimen/_8sdp"

                       android:imeOptions="actionNext"
                       android:importantForAutofill="no"
                       android:includeFontPadding="false"
                       android:inputType="text"
                       android:textColor="@color/colorPrimaryTest"
                       android:textColorHint="@color/colorHint"
                       android:textSize="@dimen/_13ssp"/>
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="@dimen/_8sdp"
                       android:layout_marginTop="@dimen/_8sdp"
                       android:text="@string/email"
                       android:textColor="@color/colorPrimaryTest"
                       android:textSize="@dimen/_10ssp"/>
                   <EditText
                       android:id="@+id/InputEmail"
                       android:layout_width="match_parent"
                       android:layout_height="@dimen/_30sdp"
                       android:layout_marginStart="@dimen/_8sdp"
                       android:layout_marginEnd="@dimen/_8sdp"
                       android:hint="@string/your_example_com"
                       android:imeOptions="actionNext"
                       android:importantForAutofill="no"
                       android:includeFontPadding="false"
                       android:inputType="textEmailAddress"
                       android:textColor="@color/colorPrimaryTest"
                       android:textColorHint="@color/colorHint"
                       android:textSize="@dimen/_13ssp"/>
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="@dimen/_8sdp"
                       android:layout_marginTop="@dimen/_8sdp"
                       android:text="@string/password"
                       android:textColor="@color/colorPrimaryTest"
                       android:textSize="@dimen/_10ssp"/>
                   <EditText
                       android:id="@+id/InputPassword"
                       android:layout_width="match_parent"
                       android:layout_height="@dimen/_30sdp"
                       android:layout_marginStart="@dimen/_8sdp"
                       android:layout_marginEnd="@dimen/_8sdp"
                       android:layout_marginBottom="@dimen/_8sdp"
                       android:hint="@string/password_hint"
                       android:imeOptions="actionNext"
                       android:importantForAutofill="no"
                       android:includeFontPadding="false"
                       android:inputType="textPassword"
                       android:textColor="@color/colorPrimaryTest"
                       android:textColorHint="@color/colorHint"
                       android:textSize="@dimen/_13ssp"/>
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="@dimen/_8sdp"
                       android:layout_marginTop="@dimen/_8sdp"
                       android:text="@string/confirm_password"
                       android:textColor="@color/colorPrimaryTest"
                       android:textSize="@dimen/_10ssp"/>
                   <EditText
                       android:id="@+id/InputConfirmPassword"
                       android:layout_width="match_parent"
                       android:layout_height="@dimen/_30sdp"
                       android:layout_marginStart="@dimen/_8sdp"
                       android:layout_marginEnd="@dimen/_8sdp"
                       android:layout_marginBottom="@dimen/_8sdp"
                       android:hint="@string/password_hint"
                       android:imeOptions="actionDone"
                       android:importantForAutofill="no"
                       android:includeFontPadding="false"
                       android:inputType="textPassword"
                       android:textColor="@color/colorPrimaryTest"
                       android:textColorHint="@color/colorHint"
                       android:textSize="@dimen/_13ssp"/>

               </LinearLayout>

           </androidx.cardview.widget.CardView>

           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <com.google.android.material.button.MaterialButton
                   android:id="@+id/signupbtn"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/_40sdp"
                   android:layout_marginStart="@dimen/_20sdp"
                   android:layout_marginEnd="@dimen/_20sdp"
                   android:includeFontPadding="false"
                   android:text="@string/sign_up"
                   android:textSize="@dimen/_13ssp"
                   android:textColor="@color/colorIcon"
                   app:layout_constraintTop_toBottomOf="@id/cardsignin"/>
               <ProgressBar
                   android:id="@+id/signupbar"
                   android:layout_width="@dimen/_25sdp"
                   android:layout_height="@dimen/_25sdp"
                   android:layout_gravity="center"
                   android:visibility="invisible"/>
           </FrameLayout>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/_20sdp"
               android:gravity="center"
               android:includeFontPadding="false"
               android:text="@string/already_have_an_account"
               android:textColor="@color/colorPrimaryTest"
               android:textSize="@dimen/_13ssp"
             />
           <TextView
               android:id="@+id/signin"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="@dimen/_20sdp"
               android:gravity="center"
               android:includeFontPadding="false"
               android:padding="@dimen/_6sdp"
               android:text="@string/sign_in"
               android:textColor="@color/colorAccent"
               android:textSize="@dimen/_14ssp"
               app:layout_constraintBottom_toBottomOf="parent"
               />
       </LinearLayout>

   </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>